--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bun-ts-starter",
   "version": "0.0.0",
   "type": "module",
+  "description": "Bun-native TypeScript library boilerplate",
+  "author": "Mancuoj <mancuoj@gmail.com>",
+  "license": "MIT",
+  "repository": "mancuoj/bun-ts-starter",
   "files": [
     "dist"
   ],
